<!--
  ~    Copyright 2016 Gurupad Mamadapur
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<resources xmlns:xliff="rn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Fad Flicks</string>

    <string name="try_again">Try Again.</string>
    <string name="internet_error_message">No Internet Connection.</string>
    <string name="empty_favourites_message">You do not have any favourites selected.</string>
    <string name="no_reviews_yet">No reviews yet.</string>

    <!--Action Bar-->
    <string name="action_search">Search</string>
    <string name="search_hint">Search by movie name…</string>

    <!-- Preference keys -->
    <string name="fav_movies_prefs_key" translatable="false">FAV_MOVIES</string>
    <string name="fav_movie_base_key" translatable="false">FAV_MOVIE_BASE_KEY</string>
    <string name="favourite_changed_key" translatable="false">FAV_CHANGED</string>
    <string name="favourite_movie_id_key" translatable="false">FAV_MOVIE_ID</string>
    <string name="fav_movie_bool_key" translatable="false">FAV_MOVIE_BOOLEAN_KEY</string>
    <string name="movie_title_key">MOVIE_TITLE_KEY</string>
    <string name="time_of_last_usage_key">TIME_OF_LAST_USAGE_KEY</string>
    <string name="last_usage_timezone">LAST_USAGE_TIMEZONE</string>

    <!--Grid Fragment data keys-->
    <string name="popularData" translatable="false">POPULAR</string>
    <string name="topRatedData" translatable="false">TOP_RATED</string>
    <string name="favouritesData" translatable="false">FAVOURITES</string>
    <string name="fragment_data_key" translatable="false">FRAGMENT_DATA_KEY</string>

    <!-- Sort Type Settings-->
    <string name="sort_type_default" translatable="false">popularity.desc</string>
    <string name="sort_type_popular" translatable="false">popularity.desc</string>
    <string name="sort_type_top_rated" translatable="false">vote_average.desc</string>

    <!-- Image Sizes according to tmbd.org -->
    <string name="image_size_small" translatable="false">w185</string>
    <string name="image_size_medium" translatable="false">w342</string>
    <string name="image_size_large" translatable="false">w780</string>

    <!--Tab Titles -->
    <string name="popular_tab_title">Popular</string>
    <string name="top_rated_tab_title">Top Rated</string>
    <string name="favourites_tab_title">Favourites</string>

    <!--Movie Details -->
    <string name="read_more">READ MORE</string>
    <string name="all_reviews">ALL REVIEWS</string>
    <string name="cast_and_crew">Cast and Crew</string>
    <string name="actors">Actors</string>
    <string name="directors">Directors</string>
    <string name="writers">Writers</string>
    <string name="music">Music</string>
    <string name="producers">Producers</string>
    <string name="genre">Genre</string>
    <string name="votes">Votes</string>
    <string name="duration">Duration</string>
    <string name="language">Language</string>
    <string name="rating">Rating</string>
    <string name="official_website">Official Website</string>
    <string name="release_date">Release Date</string>
    <string name="max_votes">10</string>
    <string name="adult_rating">A</string>
    <string name="non_adult_rating">UA</string>
    <string name="title_activity_review">Reviews</string>
    <string name="overview">Overview</string>
    <string name="videos">Videos</string>
    <string name="reviews">User reviews</string>
    <string name="action_share">Share</string>
    <string name="movie_backdrop_image">Movie backdrop image</string>
    <string name="title_activity_review_detail">Review Detail</string>


    <!-- Youtube Error-->
    <string name="youtube_error_dialog_message">In order to watch the trailer you\'ve to install Youtube App. Proceed to install ?</string>
    <string name="youtube_error_dialog_title">Install Youtube</string>
    <string name="continue_installation">Continue</string>
    <string name="youtube_package_id">https://play.google.com/store/apps/details?id=com.google.android.youtube</string>
    <string name="play_store_app_error_message">Play store app is not installed on your device.</string>


    <!--Content descriptions-->
    <string name="content_is_loading">Content is loading</string>
    <string name="movie_poster_description">Movie Poster</string>
    <string name="youtube_error_description">You need to install Youtube player</string>
    <string name="movie_backdrop_description">Movie Backdrop</string>

    <!-- String formats-->
    <string name="rating_format">
        <xliff:g id="rating">%.1f</xliff:g>
    </string>
    <string name="share_welcome_message">
        Hey, <xliff:g id="title">%s</xliff:g> is awesome.
    </string>
    <string name="share_movie_info">
        It\'s releasing on <xliff:g id="date">%s</xliff:g>.\n
        It has actors like <xliff:g id="actor1">%s</xliff:g>, <xliff:g id="actor2">%s</xliff:g>…\n
        Website : <xliff:g id="website">%s</xliff:g>.
    </string>
    <string name="runtime"><xliff:g id="date">%d</xliff:g> min</string>


</resources>
