<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.MainActivity">

    <LinearLayout
        android:id="@+id/empty_favourites_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/content_padding"
            android:src="@drawable/ic_empty_favourite_48dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_favourites_message"
            android:textColor="@color/grey_700"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/internet_error_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:contentDescription="@string/internet_error_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/content_padding"
            android:src="@drawable/ic_signal_wifi_off_black_36dp"/>

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/content_padding"
            android:text="@string/internet_error_message"
            android:textColor="@color/grey_700"/>

        <Button
            android:id="@+id/try_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/try_again"
            android:textColor="@color/grey_700"/>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView

    android:id="@+id/grid_recycler_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:scrollbars="vertical"/>
</FrameLayout>